<resources>
    <string name="app_name">Misuri</string>
    <string name="app_version">Release</string>
    <string name="app_loc_updates">Location updates: %1$s</string>
    <string name="tickers_default">0</string>
    <string name="calculation_title">Height calculated:</string>
    <string name="button_text">Start measuring your height</string>
    <string name="result_body">You walked %1$sm for %2$ss at a speed of %3$sm/s and your height is calculated to be %4$sm.</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="preference_file_key">com.example.misuriSpeed.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
</resources>