<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background"
    android:id="@+id/activity_main">

    <TextView
        android:id="@+id/stepsLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/showversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:text="@string/app_version"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stepsLbl" />
    <TextView
        android:id="@+id/numberoflocationupdates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/app_loc_updates"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/showversion" />
    <TextView
        android:id="@+id/takensteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tickers_default"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numberoflocationupdates" />
    <TextView
        android:id="@+id/receivedLocationUpdates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tickers_default"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takensteps" />

    <Button
        android:id="@+id/init_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/black"
        android:text="@string/button_text"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receivedLocationUpdates" />

    <TextView
        android:id="@+id/height_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:layout_marginEnd="8dp"
        android:text="@string/calculation_title"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/init_button" />

    <TextView
        android:id="@+id/calculation_result"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/height_title" />

    <RelativeLayout
        android:id="@+id/errorlogs_container"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="5dp"
        android:layout_marginTop="80dp"
        android:textIsSelectable="true"
        tools:context=".MainActivity"
        app:layout_constraintTop_toTopOf="@+id/calculation_result">

        <TextView
            android:id="@+id/errorlogs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:layout_marginEnd="8dp"
            android:scrollbars="vertical"
            android:text=""
            android:textIsSelectable="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>
    <View
        android:id="@+id/whereDoesErrorLogsStop"
        android:layout_height="3dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/errorlogs_container"
        android:background="@drawable/bottomline" />

</androidx.constraintlayout.widget.ConstraintLayout>